--- a/embed7.html
+++ b/embed7.html
@@ -281,7 +281,7 @@
 
       // --- カード1: あなたの学習 ---
       const myCard = createCardHTML(
-          'あなた (ログイン中)',
+          '一位の方のデータ',
           userData.userId,
           userData.totalMs,
           userData.recordCount,
