--- a/embed10.html
+++ b/embed10.html
@@ -108,7 +108,7 @@ const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY, {
   auth: {
     persistSession: true,
     autoRefreshToken: true,
-    detectSessionInUrl: false,
+    detectSessionInUrl: true,
     storage: window.localStorage,
     storageKey: 'supabase.auth.token',
     flowType: 'pkce'
