--- a/embed12.html
+++ b/embed12.html
@@ -83,7 +83,7 @@
     // 現在のURLを取得（本番環境でも動作するように）
     const getRedirectUrl = () => {
       // 本番環境のURLに置き換えてください
-      const production = 'https://your-domain.com/embed11.html'
+      const production = 'https://ice256climber.github.io/studio-auth/embed11.html'
       
       // 開発環境かどうかを判定
       const isDev = window.location.hostname === 'localhost' || 
